Componente Item-box, estilo e dados

--- a/app/dashboard/dashboard.html
+++ b/app/dashboard/dashboard.html
@@ -6,7 +6,6 @@
         <girl-box grid="1" color-class="bg-aqua-active" name="Maisie" value="12" text="LOVE"></girl-box>
     </div>
     <div class="row">
-        <girl-box grid="1" color-class="bg-aqua-active" name="Allison" value="10" text="LOVE"></girl-box>
-        <girl-box grid="1" color-class="bg-aqua-active" name="Maisie" value="12" text="LOVE"></girl-box>
+        <item-box grid="1" color-class="bg-green" icon="fa-solid fa-person-swimming" value="5" text="SWIMMER"></girl-box>
     </div>
 </section>
