--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,6 @@
     </div>
     <script src="/assets/js/deps.min.js"></script>
     <script src="/assets/js/app.min.js"></script>
-
+    <script src="https://kit.fontawesome.com/3f927bbe50.js" crossorigin="anonymous"></script>
   </body>
 </html>
