--- a/app/dashboard/dashboard.html
+++ b/app/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<content-header name="Dashboard" small="Versão 1.0"></content-header>
+<content-header name="Game" small="Quest Tracker"></content-header>
 
 <section class="content">
     <div class="row">
@@ -6,6 +6,6 @@
         <girl-box grid="1" color-class="bg-aqua-active" name="Maisie" value="12" text="LOVE"></girl-box>
     </div>
     <div class="row">
-        <item-box grid="1" color-class="bg-green" icon="fa-solid fa-person-swimming" value="5" text="SWIMMER"></girl-box>
+        <item-box grid="1" color-class="bg-green" icon="fa-solid fa-person-swimming" value="5" text="SWIMMER"></item-box>
     </div>
 </section>
