Var, time e task adicionados

--- a/app/dashboard/dashboard.html
+++ b/app/dashboard/dashboard.html
@@ -2,9 +2,9 @@
 
 <section class="content" ng-controller="DashboardCtrl as dashboard">
     <div class="row">
-        <girl-box grid="1" color-class="bg-aqua-active" name="{{ dashboard.girls[0].name }}" value="{{ dashboard.girls[0].value }}" text="{{ dashboard.girls[0].desc }}"></girl-box>
+        <girl-box grid="4 3 2 1" color-class="bg-aqua-active" name="{{ dashboard.girls[0].name }}" value="{{ dashboard.girls[0].value }}" text="{{ dashboard.girls[0].desc }}"></girl-box>
     </div>
     <div class="row">
-        <item-box grid="1" color-class="bg-green" icon="{{ dashboard.itens[0].icon }}" value="{{ dashboard.itens[0].value }}" text="{{ dashboard.itens[0].name }}"></item-box>
+        <item-box grid="4 3 2 1" color-class="bg-green" icon="{{ dashboard.itens[0].icon }}" value="{{ dashboard.itens[0].value }}" text="{{ dashboard.itens[0].name }}"></item-box>
     </div>
 </section>
