--- a/app/dashboard/dashtabs.html
+++ b/app/dashboard/dashtabs.html
@@ -7,9 +7,7 @@
                 </a>
             </li>
             <li ng-if="dbCtrl.tabDash" ng-class="{active: dbCtrl.taDash}">
-                <a href data-target="#tabDash" data-toggle="tab">
-                    <i class="fa-solid fa-list-check"></i> Dashboard
-                </a>
+                <a href data-target="#tabDash" data-toggle="tab"></a>
             </li>
         </ul>
         <div class="tab-content">
