--- a/app/gameSave/list.html
+++ b/app/gameSave/list.html
@@ -18,7 +18,7 @@
                         <i class="fa-solid fa-user"></i></button>
                     <button class="btn btn-info" ng-click="gsCtrl.refreshVar(save)">
                         <i class="fa-solid fa-boxes-packing"></i></button>
-                    <button class="btn btn-info" ng-click="gsCtrl.refreshTask(save)">
+                    <button class="btn btn-info" ng-click="gsCtrl.refreshTask(save, 1)">
                         <i class="fa-solid fa-list-check"></i></button>
                     <button class="btn btn-warning" ng-click="gsCtrl.showTabUpdate(save)">
                         <i class="fa fa-pencil"></i></button>
