--- a/app/gameSave/taskList.html
+++ b/app/gameSave/taskList.html
@@ -1,5 +1,10 @@
 <div class="box-body">
-    <h1>{{gsCtrl.save.game}}</h1><button class="btn btn-default" ng-click="gsCtrl.refreshSave()">Voltar</button>
+    <div class="col-xs-12 col-sm-12 col-md-10">
+        <h3>{{gsCtrl.save.game}}</h3>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-2">
+        <button class="btn btn-danger" ng-click="gsCtrl.refreshSave()">Voltar</button>
+    </div>
 
     <table class="table">
         <thread>
@@ -7,15 +12,23 @@
                 <th>Código</th>
                 <th>Quest</th>
                 <th>Tarefa</th>
+                <th>Grupo</th>
+                <th>Completo</th>
+                <th>Disponível</th>
+                <th>Repete</th>
                 <th>Ações</th>
             </tr>
         </thread>
         <tbody>
             <tr ng-repeat="task in gsCtrl.tasks">
-                <td>{{ task.codTask }}</td>
-                <td>{{ task.quest }}</td>
-                <td>{{ task.task }}</td>
-                <td class="table-actions">
+                <td>{{:: task.codTask }}</td>
+                <td>{{:: task.quest }}</td>
+                <td>{{:: task.task }}</td>
+                <td>{{:: task.group }}</td>
+                <td>{{:: task.taskComplete }}</td>
+                <td>{{:: task.taskDisponible }}</td>
+                <td>{{:: task.taskRepeat }}</td>
+                <td class="table-mini-actions">
                     <button class="btn btn-warning" ng-click="gsCtrl.showTabTaskUpdate(task)">
                         <i class="fa fa-pencil"></i></button>
                     <button class="btn btn-danger" ng-click="gsCtrl.showTabTaskDelete(task)">
@@ -24,4 +37,19 @@
             </tr>
         </tbody>
     </table>
+    <div class="box-footer clearfix">
+        <ul ng-if="gsCtrl.needPagination" class="pagination pagination-sm no-margin pull-right">
+            <li ng-if="gsCtrl.hasPrev">
+                <a href href ng-click="gsCtrl.refreshTask(gsCtrl.save, gsCtrl.page-1)">Anterior</a>
+            </li>
+
+            <li ng-class="{active: gsCtrl.isCurrent(page)}" ng-repeat="page in gsCtrl.pagesArray">
+                <a href ng-click="gsCtrl.refreshTask(gsCtrl.save, page)">{{ page }}</a>
+            </li>
+
+            <li ng-if="gsCtrl.hasNext">
+                <a href href ng-click="gsCtrl.refreshTask(gsCtrl.save, gsCtrl.page+1)">Próximo</a>
+            </li>
+        </ul>
+    </div>
 </div>
