--- a/app/gameSave/timeList.html
+++ b/app/gameSave/timeList.html
@@ -1,5 +1,10 @@
 <div class="box-body">
-    <h1>{{gsCtrl.save.game}}</h1><button class="btn btn-default" ng-click="gsCtrl.refreshSave()">Voltar</button>
+    <div class="col-xs-12 col-sm-12 col-md-10">
+        <h3>{{gsCtrl.save.game}}</h3>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-2">
+        <button class="btn btn-danger" ng-click="gsCtrl.refreshSave()">Voltar</button>
+    </div>
 
     <table class="table">
         <thread>
